syntax = "proto3";

package warcraft;

import "warcraft/guild-type.proto";

option go_package = "github.com/ToxicToast/Azkaban-Go/libs/proto/warcraft;warcraft";

message GetGuildsResponse {
  repeated Guild data = 1;
  int64 total = 2;
}