syntax = "proto3";

package warcraft.guild;

import "google/protobuf/wrappers.proto";

option go_package = "github.com/ToxicToast/Azkaban-Go/libs/proto/warcraft/guild;guild";


message GetGuildsRequest {
  optional int64 limit = 1;
  optional int64 offset = 2;
  optional bool with_deleted = 3;
}